# UV_K5-Tools

./: README.md
CustomFW/: CMakeLists.txt
CustomFW/src/: CMakeLists.txt  main.c  symbols.ld
CustomFW/src/af80_func_SETUP_WRAPPER/: CMakeLists.txt  af80_func_SETUP_WRAPPER.s
CustomFW/src/b8d0_func_CONFIG_PORTCON/: CMakeLists.txt  b8d0_func_CONFIG_PORTCON.s
ImageToCppHeader/: main.py
TutOnlineEnv/: README.md  SetupGCC.sh
fwPatcher/: binary.py  main_fw.py  patch.py
fwPatcher/linker/: orig_fw.ld  symbols.ld
pico_eepromdump/: CMakeLists.txt  eeprom_dat.h  main.c
screenmirror/: dp32g030.cfg  screenmirror.py
